parse GetApiKeyResponse